fix Stats
