# go-backend/docs/swagger.json
@@ -26,6 +26,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Тип донации пользователя",
+                        "name": "type",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "type": "file",
                         "description": "Фотография пользователя",
                         "name": "photo",
@@ -908,17 +915,11 @@
         "model.RequestUpdateStat": {
             "type": "object",
             "properties": {
-                "blood": {
-                    "type": "integer"
+                "donationType": {
+                    "type": "string"
                 },
                 "email": {
                     "type": "string"
-                },
-                "plasma": {
-                    "type": "integer"
-                },
-                "platelets": {
-                    "type": "integer"
                 }
             }
         },
